--- a/Sprint 1/UI.html
+++ b/Sprint 1/UI.html
@@ -6,18 +6,11 @@
 
 
 </head>
-<body style="background-image:url(Images/poxy-top_fly.png);background-repeat:no-repeat;background-position:400px 30px">
+<body>
     <h1>Poxy Bingo</h1>
     <div>
-        <p><a href="poxybingo.html" id="reload">Click here</a> to create a new card</p>
+        <p><a href="UI.html" id="reload">Click here</a> to create a new card</p>
         <table>
-            <tr>
-                <th>B</th>
-                <th>I</th>
-                <th>N</th>
-                <th>G</th>
-                <th>O</th>
-            </tr>
             <tr>
                 <td id="square0">&nbsp;</td>
                 <td id="square5">&nbsp;</td>
