--- a/Sprint 2/UI.html
+++ b/Sprint 2/UI.html
@@ -6,7 +6,7 @@
 
 
 </head>
-<body style="background-image:url(Images/poxy-top_fly.png);background-repeat:no-repeat;background-position:400px 30px">
+<body>
     <h1>Poxy Bingo</h1>
     <div>
         <p><a href="UI.html" id="reload">Click here</a> to create a new card</p>
